--- a/main/views/admin/add-edit-product.ejs
+++ b/main/views/admin/add-edit-product.ejs
@@ -16,5 +16,6 @@
     <% if (editing) { %>
         <input type="hidden" value="<%= product._id %>" name="productId">
     <% } %>
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <button type="submit"><% if (editing) { %> Editar Produto <% } else { %> Adicionar Produto <% } %></button>
 </form>
