--- a/main/views/auth/profile.ejs
+++ b/main/views/auth/profile.ejs
@@ -3,6 +3,7 @@
 <%- include('../includes/nav') %>
 
 <form action="/logout" method="post">
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <button type="submit">Logout</button>
 </form>
 <h1><%= user.name %></h1>
