--- a/main/views/shop/cart.ejs
+++ b/main/views/shop/cart.ejs
@@ -14,6 +14,7 @@
                     </div>
                     <form action="/cart-delete" method="POST">
                         <input type="hidden" value="<%= p.productId._id %>" name="productId">
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <button type="submit">Deletar</button>
                     </form>
                 </li>
@@ -21,6 +22,7 @@
         </ul>
         <div class="order">
             <form action="/create-order" method="POST">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <button type="submit" class="btn">Fazer o pedido agora!</button>
             </form>
         </div>
